--- a/styles/master.css
+++ b/styles/master.css
@@ -1,8 +1,47 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700');
+
+body {
+	font-family: 'Quicksand', sans-serif;
+}
+
 h1 {
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	color: navy;
 }
 
+/* FORMS */
+
 .form {
 	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	box-shadow: 0px 2px 4px grey;
+	padding: auto;
+}
+
+.text-field {
+	border: none;
+	border-bottom: 2px solid navy;
+}
+
+.text-area {
+	border: 2px solid navy;
+}
+
+#issue {
+	border: none;
+	border-bottom: 2px solid navy;
+}
+
+/* BUTTONS */
+
+.submit {
+	text-align: center;
+	color: white;
+	display: inline-block;
+	background-color: green;
+}
+
+.cancel {
+	color: red;
 }
