--- a/styles/master.css
+++ b/styles/master.css
@@ -5,8 +5,13 @@ body {
 }
 
 h1 {
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-family: 'Quicksand', sans-serif;
+	font-weight: 700;
 	color: navy;
+}
+
+.text-graph {
+	padding: 3%;
 }
 
 /* FORMS */
@@ -44,4 +49,8 @@ h1 {
 
 .cancel {
 	color: red;
+}
+
+.button-container {
+	justify-content: center;
 }
