fixing script src after refactor

--- a/views/new-issue.html
+++ b/views/new-issue.html
@@ -5,11 +5,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel='stylesheet' type='text/css' href='../styles/master.css' />
+	<link rel='stylesheet' type='text/css' href='../public/css/master.css' />
 	<title>New Issue</title>
 	<link rel='stylesheet' type='text/css' href='../sdk/map.css' />
-	<link rel='stylesheet' type='text/css' href='../styles/elements.css' />
-	<script type='text/javascript' src='../scripts/form.js'></script>
+	<link rel='stylesheet' type='text/css' href='../public/css/elements.css' />
+	<script type='text/javascript' src='../public/scripts/form.js'></script>
 	<script type='text/javascript' src='../sdk/tomtom.min.js'></script>
 	<style>
 		.icon-locate_me_btn {
