--- a/views/map.html
+++ b/views/map.html
@@ -8,7 +8,7 @@
     <meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no' />
     <link rel='stylesheet' type='text/css' href='../sdk/map.css' />
     <link rel='stylesheet' type='text/css' href='../public/css/elements.css' />
-    <script type='text/javascript' src='..public/scripts/form.js'></script>
+    <script type='text/javascript' src='../public/scripts/form.js'></script>
     <script type='text/javascript' src='../sdk/tomtom.min.js'></script>
     <style>
         .icon-locate_me_btn {
