--- a/views/new-issue.html
+++ b/views/new-issue.html
@@ -23,28 +23,35 @@
 <body class='use-all-space'>
 	NEW ISSUE PAGE
 	<form class="form" id="issueform">
-		<div class="issue-type">
+ 		<div class="issue-type">
 			<input type="text" class="" id="issue-type" name="type" required>
-			<label class="label" for="issue-input">Type</label>
-		</div>
-		<div class="Location">
-			<input type="text" class="" id="location" name="location" required>
-			<label class="label" for="location">Address</label>
-		</div>
-		<div class="Description">
-			<label class="label" for="location">Description</label>
-			<textarea type="textarea" class="" id="description" name="description" max-length "300" required>
-			</textarea>
-		</div>
-		<div class="button-container">
-			<button type="button" class="cancel">
-				Cancel
-			</button>
-			<button class="submit">
-				Submit
-			</button>
-		</div>
-	</form>
+		<br>
+			<select id="issue" name="issue" required>
+			<option value="undefined">Select Issue Type</option>
+      <option value="pothole">Pothole</option>
+      <option value="flooding">Flooding</option>
+      <option value="sidewalk">Obstructed Sidewalk</option>
+			<option value="litter">Litter</option>
+    </select>
+ 		</div>
+ 		<div class="Location">
+			<input type="text" class="text-field" id="location" name="location" placeholder="Address" required>
+ 		</div>
+		<br>
+ 		<div class="Description">
+			<textarea type="textarea" class="text-area" id="description" name="description" max-length"300" placeholder="Description" required>
+ 			</textarea>
+ 		</div>
+		<br>
+ 		<div class="button-container">
+ 			<button type="button" class="cancel">
+ 				Cancel
+ 			</button>
+ 			<button class="submit">
+ 				Submit
+ 			</button>
+ 		</div>
+ 	</form>
 	<div id='map' class='use-all-space'></div>
 	<script>
 		// Define your product name and version
