fixing css refs

--- a/views/home.html
+++ b/views/home.html
@@ -4,18 +4,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel='stylesheet' type='text/css' href='../styles/master.css'/>
-	<title>Login</title>
+	<link rel='stylesheet' type='text/css' href='../public/css/master.css' />
+	<title>Home</title>
 </head>
 
 <body>
 	<h1>The App Home</h1>
 	<p>
-		Sed ut perspiciatis unde omnis iste natus error sit
-		voluptatem accusantium doloremque laudantium, totam
-		rem aperiam, eaque ipsa quae ab illo inventore
-		veritatis et quasi architecto beatae vitae dicta sunt
-		explicabo.
+		Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque
+		ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
 	</p>
 	<br>
 
