--- a/views/map.html
+++ b/views/map.html
@@ -9,7 +9,7 @@
     <link rel='stylesheet' type='text/css' href='../sdk/map.css' />
     <link rel='stylesheet' type='text/css' href='/css/elements.css' />
     <script type='text/javascript' src='/scripts/form.js'></script>
-    <script type='text/javascript' src='../sdk/tomtom.min.js'></script>
+    <script type='text/javascript' src='../sdk/tomtom.min.js.map'></script>
     <style>
         .icon-locate_me_btn {
             cursor: pointer;
